--- a/HundredNotebook.ipynb
+++ b/HundredNotebook.ipynb
@@ -113,7 +113,7 @@
    "id": "f8d17c29-d173-439c-bc0f-40df45b60064",
    "metadata": {},
    "source": [
-    "Join players to their batting performances and pivot to get various stats, typically I would do this in SQL rather than using pandas"
+    "Join players to their batting performances and pivot to get various stats"
    ]
   },
   {
